| Bug #56006 | test failures on mysql-5.1-rep+2-wl2540 | ||
|---|---|---|---|
| Submitted: | 16 Aug 2010 10:47 | Modified: | 29 Nov 2010 22:35 |
| Reporter: | Andrei Elkin | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: Replication | Severity: | S3 (Non-critical) |
| Version: | 5.1-rep+2-wl2540 | OS: | Any |
| Assigned to: | Andrei Elkin | CPU Architecture: | Any |
| Tags: | replication checksum | ||
[17 Aug 2010 21:36]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/116020 3201 Andrei Elkin 2010-08-18 Bug #56006 test failures on mysql-5.1-rep+2-wl2540 This is an itermediate patch to cover the valgrind complaints part of the failures. Move commits to follow.
[22 Aug 2010 8:06]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/116456 3204 Andrei Elkin 2010-08-22 Bug #56006 test failures on mysql-5.1-rep+2-wl2540 this patch 1. fixes an assert erronously firing when the master started with --master-verify-checksum=1. 2. corrects access to event_buf bytes - the header flags - to treat the buffer as an array of bytes. @ mysql-test/suite/rpl/r/rpl_checksum_cache.result results changed. @ mysql-test/suite/rpl/t/rpl_checksum_cache.test making testing more "aggressive" to raise a loop limit twice and with forcing the master side event verification. @ sql/log_event.cc Correcting assertion to allow FD event to carry no-alg info and being checksummed with CRC32. That case indicates no checksum of all the following events while FD itself does contain it. Correcting indexing of `event_buf' to treat it as an array of bytes.
[25 Aug 2010 7:42]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/116706 3205 Andrei Elkin 2010-08-25 Bug #56006 test failures on mysql-5.1-rep+2-wl2540 this patch fixes remained issue in accessing event_buf bytes of FD event inside event_checksum_test()
[27 Aug 2010 10:43]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/116979 3206 Andrei Elkin 2010-08-27 bug#56006 fixing a warinig on slave in rpl_heartbeat_basic
[27 Aug 2010 15:36]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/117042 3207 Andrei Elkin 2010-08-27 bug#56006 fixing a warinig on slave in rpl_heartbeat_basic (results file updated)
[29 Aug 2010 15:38]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/117080 3208 Andrei Elkin 2010-08-29 Bug #56006 there were failure with rpl_checksum_cache in MBL::write_cache() caused by an opeque issue with int4store expansion on 64 bit platforms (linux in particular). The core reason of int4store issue is yet unknown (a bug to be reported). However, there is a simple workaround to not invoke the macro inside another macro which is implemented to satisfy the test
[13 Sep 2010 12:00]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/118071 3204 Andrei Elkin 2010-09-13 Bug #56006 test failures on mysql-5.1-rep+2-wl2540 There was a bunch of issues. 1. An assert fired erronously when the master started with --master-verify-checksum=1. 2. access to event_buf bytes - the header flags - was incorrect due to implicit casting to short int. 3. a warinig on slave in rpl_heartbeat_basic and few more tests. 4. there were failure with rpl_checksum_cache in MBL::write_cache() caused by an opaque issue with int4store expansion on 64 bit platforms (linux in particular). 5. building on solaris; 6. failure on solaris (endiness); Fixed with impoving sources code, adding suppressions in the tests and a slight code restructuring in order to comply to various linkers. @ libmysqld/Makefile.am rpl_utility.cc calls a function defined in rpl_reporting.cc. Appending the latter file to the list to contribute to libmysqld with that func in particular. For a reason undetected building in examples/ with -l libmysqld.a did not reveal that issue until a new `event_checksum_test' function body has been relocated from log_event.cc. @ mysql-test/suite/rpl/r/rpl_change_master.result results changed. @ mysql-test/suite/rpl/r/rpl_checksum.result results changed. @ mysql-test/suite/rpl/r/rpl_checksum_cache.result results changed. @ mysql-test/suite/rpl/r/rpl_heartbeat_basic.result results changed. @ mysql-test/suite/rpl/t/rpl_change_master.test a new suppression because checksum code conducts master-slave network handshake interruptable and detectable by mtr. @ mysql-test/suite/rpl/t/rpl_checksum_cache.test making testing more "aggressive" to raise a loop limit twice and with forcing the master side event verification. @ mysql-test/suite/rpl/t/rpl_heartbeat_basic.test a new suppression because checksum code conducts master-slave network handshake interruptable and detectable by mtr. @ sql/log.cc there were failure with rpl_checksum_cache in MBL::write_cache() caused by an opeque issue with int4store expansion on 64 bit platforms (linux in particular) - the hunk sql/log.cc @@ -5021,9 +5022,9 @@. endianess issue was reveal by running on solaris platfrom. CRC value has to be int4stored; access to event_buf bytes - the header flags - is corrected to treat the buffer as an array of bytes; @ sql/log_event.cc Correcting assertion to allow FD event to carry no-alg info and being checksummed with CRC32. That case indicates no checksum of all the following events while FD itself does contain it. Correcting indexing of `event_buf' to treat it as an array of bytes. moving event_checksum_test() into a proper holder-file to satisfy a set of linker constraints, including: 1. resolving linker time dependencies on solaris where log_event.o symbols could not be found by slave.o, because the latter follows the former in the list of object files; 2. mysqlbinlog needs the func 3. examples/libmysqld executable needs the function The new location is chosen to be rpl_utility.cc which safices the three requirements. @ sql/rpl_utility.cc event_checksum_test() is added to the file to satify linker constraints.
[28 Sep 2010 14:55]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/119292 3170 Andrei Elkin 2010-09-28 [merge] bug#56006 manual merge -r 3201 of 5.1-wl2540 to mext-mr-wl2540
[28 Sep 2010 15:01]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/119297 3171 Andrei Elkin 2010-09-28 bug#56006 null merge -r 3202 of 5.1-wl2540 to mext-mr-wl2540
[28 Sep 2010 15:07]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/119299 3171 Andrei Elkin 2010-09-28 [merge] bug#56006 null merge -r 3202 of 5.1-wl2540 to mext-mr-wl2540
[28 Sep 2010 15:51]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/119303 3172 Andrei Elkin 2010-09-28 [merge] bug#56006 merge -r > 3203 of 5.1-wl2540 to mext-mr-wl2540
[28 Sep 2010 17:20]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/119312 3173 Andrei Elkin 2010-09-28 fixing tests after merging bug#56006 to next-mr-wl2540
[29 Nov 2010 11:11]
Bugs System
Pushed into mysql-trunk 5.6.1-m5 (revid:alexander.nozdrin@oracle.com-20101129111021-874if2qsp0i8d5ze) (version source revid:alexander.nozdrin@oracle.com-20101129111021-874if2qsp0i8d5ze) (merge vers: 5.6.1-m5) (pib:23)
[29 Nov 2010 22:35]
Jon Stephens
Issue does not appear in a release; no changelog entry needed. Closed without further action.

Description: Few tests failed on mysql-5.1-rep+2-wl2540. E.g rpl.rpl_server_uuid 'stmt' [ fail ] Found warnings/errors in server log file! Test ended at 2010-07-09 11:18:04 line 100709 12:17:49 [ERROR] Slave I/O: The slave I/O thread stops because a fatal error is encountered when it tried to SELECT @master_binlog_checksum. Error: , Error_code: 1593 100709 12:17:59 [Warning] Slave I/O: Master command COM_REGISTER_SLAVE failed: failed registering on master, reconnecting to try again, log 'master-bin.000004' at postion 112, Error_code: 1597 ^ Found warnings in /export/home/pb2/build/sb_0-None-1278661815.2/mysql-5.1-rep+2-wl2540-gcov/mysql-test/var/log/mysqld.2.err While some will be gone after bug#54935 fixes merging, few are expected to remain. How to repeat: See PB2. Suggested fix: To improve tests or code if necessary.