Bug #56006  test failures on mysql-5.1-rep+2-wl2540

this patch 
1. fixes an assert erronously firing when the master started with
--master-verify-checksum=1.
2. corrects access to event_buf bytes - the header flags - to treat
  the buffer as an array of bytes.